--- a/gateway-server/src/main/resources/application.properties
+++ b/gateway-server/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=gateway-server
 #port
 server.port=8090
 #eureka
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://discovery-server:8761/eureka
 
 management.tracing.sampling.probability=1.0
+management.zipkin.tracing.endpoint=http://zipkin-server:9411/api/v2/spans
