--- a/items-service/src/main/resources/application.properties
+++ b/items-service/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=items-service
 server.port=8002
 #eureka
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://discovery-server:8761/eureka
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 management.tracing.sampling.probability=1.0
+management.zipkin.tracing.endpoint=http://zipkin-server:9411/api/v2/spans
