--- a/oauth-service/src/main/resources/application.properties
+++ b/oauth-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=oauth-service
 server.port=9100
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://discovery-server:8761/eureka/
 
 management.tracing.sampling.probability=1.0
