--- a/products-service/src/main/resources/application.properties
+++ b/products-service/src/main/resources/application.properties
@@ -1,14 +1,15 @@
 spring.application.name=product-service
 server.port=${PORT:0}
 #MySql
-spring.datasource.url=jdbc:mysql://localhost:3306/db_spring_cloud
+spring.datasource.url=jdbc:mysql://mysql8:3306/db_spring_cloud
 spring.datasource.username=root
 spring.datasource.password=sasa1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 #eureka
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://discovery-server:8761/eureka
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 management.tracing.sampling.probability=1.0
+management.zipkin.tracing.endpoint=http://zipkin-server:9411/api/v2/spans
 
