--- a/users-service/src/main/resources/application.properties
+++ b/users-service/src/main/resources/application.properties
@@ -2,13 +2,13 @@ spring.application.name=users-service
 
 server.port=${PORT:0}
 #MySql
-spring.datasource.url=jdbc:mysql://localhost:3306/db_spring_cloud
+spring.datasource.url=jdbc:mysql://mysql8:3306/db_spring_cloud
 spring.datasource.username=root
 spring.datasource.password=sasa1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 #eureka
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://discovery-server:8761/eureka
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 
